Finito trasporto front-end e inizio implementazione

--- a/gameshock_project/src/main/resources/messages/message_IT.properties
+++ b/gameshock_project/src/main/resources/messages/message_IT.properties
@@ -1,2 +1,12 @@
 pageTitle.index = Gameshock
 pageTitle.videogame = Videogame
+pageTitle.accessori = Accessori
+pageTitle.informazioni = Informazioni
+pageTitle.dettagliVideogame = Dettagli Videogame
+pageTitle.dettagliAccessorio = Dettagli Accessorio
+pageTitle.login = Login
+pageTitle.homeAmm = Home Amministratore
+pageTitle.inserisciVideogameAmm = Inserimento Videogame
+pageTitle.inserisciAccessorioAmm = Inserimento Accessorio
+pageTitle.vediVideogameAmm = Vedi/Elimina Videogame
+pageTitle.vediAccessorioAmm = Vedi/Elimina Accessorio
