Implementazione inserimento articoli

--- a/gameshock_project/src/main/resources/messages/message_IT.properties
+++ b/gameshock_project/src/main/resources/messages/message_IT.properties
@@ -1,3 +1,8 @@
+
+####################
+#NOMI PAGINE HTML
+####################
+
 pageTitle.index = Gameshock
 pageTitle.videogame = Videogame
 pageTitle.accessori = Accessori
@@ -10,3 +15,31 @@ pageTitle.inserisciVideogameAmm = Inserimento Videogame
 pageTitle.inserisciAccessorioAmm = Inserimento Accessorio
 pageTitle.vediVideogameAmm = Vedi/Elimina Videogame
 pageTitle.vediAccessorioAmm = Vedi/Elimina Accessorio
+
+####################
+#MESSAGGI DI ERRORE
+####################
+
+#ACCESSORIO
+required.accessory.code = Il codice non e' stato inserito
+required.accessory.name = Il nome non e' stato inserito
+required.accessory.rating = La valutazione non e' stata inserita
+required.accessory.newPrice = Il prezzo nuovo non e' stato inserito
+required.accessory.usedPrice = Il prezzo usato non e' stato inserito
+required.accessory.color = Il colore non e' stato inserito
+required.accessory.category = La categoria non e' stata inserita
+required.accessory.platforms = La piattaforma non e' stata inserita
+accessoryDuplicato = L'accessorio e' gia' presente
+
+#VIDEOGAME
+required.videogame.code = Il codice non e' stato inserito
+required.videogame.name = Il nome non e' stato inserito
+required.videogame.rating = La valutazione non e' stata inserita
+required.videogame.newPrice = Il prezzo nuovo non e' stato inserito
+required.videogame.usedPrice = Il prezzo usato non e' stato inserito
+required.videogame.dateRelease = La data di rilascio non e' stata inserita
+required.videogame.genre = Il genere non e' stato inserito
+required.videogame.pegi = Il pegi non e' stato inserito
+required.videogame.publisher = La casa produttrice non e' stata inserita
+required.videogame.platforms = La piattaforma non e' stata inserita
+videogameDuplicato = Il videogame e' gia' presente
