Implementazione amministratore completato

--- a/gameshock_project/src/main/resources/messages/message_IT.properties
+++ b/gameshock_project/src/main/resources/messages/message_IT.properties
@@ -21,15 +21,15 @@ pageTitle.vediAccessorioAmm = Vedi/Elimina Accessorio
 ####################
 
 #ACCESSORIO
-required.accessory.code = Il codice non e' stato inserito
-required.accessory.name = Il nome non e' stato inserito
-required.accessory.rating = La valutazione non e' stata inserita
-required.accessory.newPrice = Il prezzo nuovo non e' stato inserito
-required.accessory.usedPrice = Il prezzo usato non e' stato inserito
-required.accessory.color = Il colore non e' stato inserito
-required.accessory.category = La categoria non e' stata inserita
-required.accessory.platforms = La piattaforma non e' stata inserita
-accessoryDuplicato = L'accessorio e' gia' presente
+required.accessorio.code = Il codice non e' stato inserito
+required.accessorio.name = Il nome non e' stato inserito
+required.accessorio.rating = La valutazione non e' stata inserita
+required.accessorio.newPrice = Il prezzo nuovo non e' stato inserito
+required.accessorio.usedPrice = Il prezzo usato non e' stato inserito
+required.accessorio.color = Il colore non e' stato inserito
+required.accessorio.category = La categoria non e' stata inserita
+required.accessorio.platform = La piattaforma non e' stata inserita
+accessorioDuplicato = L'accessorio e' gia' presente
 
 #VIDEOGAME
 required.videogame.code = Il codice non e' stato inserito
@@ -41,5 +41,5 @@ required.videogame.dateRelease = La data di rilascio non e' stata inserita
 required.videogame.genre = Il genere non e' stato inserito
 required.videogame.pegi = Il pegi non e' stato inserito
 required.videogame.publisher = La casa produttrice non e' stata inserita
-required.videogame.platforms = La piattaforma non e' stata inserita
+required.videogame.platform = La piattaforma non e' stata inserita
 videogameDuplicato = Il videogame e' gia' presente
