--- a/gameshock_project/src/main/resources/messages/message_IT.properties
+++ b/gameshock_project/src/main/resources/messages/message_IT.properties
@@ -4,7 +4,7 @@
 ####################
 
 pageTitle.index = Gameshock
-pageTitle.videogame = Videogame
+pageTitle.videogame = Videogames
 pageTitle.accessori = Accessori
 pageTitle.informazioni = Informazioni
 pageTitle.dettagliVideogame = Dettagli Videogame
@@ -30,6 +30,7 @@ required.accessorio.color = Il colore non e' stato inserito
 required.accessorio.category = La categoria non e' stata inserita
 required.accessorio.platform = La piattaforma non e' stata inserita
 accessorioDuplicato = L'accessorio e' gia' presente
+ratingNonValido = Il rating non e' valido
 
 #VIDEOGAME
 required.videogame.code = Il codice non e' stato inserito
@@ -43,3 +44,5 @@ required.videogame.pegi = Il pegi non e' stato inserito
 required.videogame.publisher = La casa produttrice non e' stata inserita
 required.videogame.platform = La piattaforma non e' stata inserita
 videogameDuplicato = Il videogame e' gia' presente
+piattaformaNonEsistente = La piattaforma non esiste
+ratingNonValido = Il rating non e' valido
